--- a/config/locales/custom_updates/de-DE/budgets.yml
+++ b/config/locales/custom_updates/de-DE/budgets.yml
@@ -38,7 +38,7 @@ de:
       investments:
         index:
           sidebar:
-            user_votes: "Meine Stimmen: %{count}"
+            user_votes: "Abgegebene Stimmen: %{count}"
         form:
           required: Ihr Investitionsvorschlag
         investment:
