--- a/config/locales/custom_updates/de-DE/budgets.yml
+++ b/config/locales/custom_updates/de-DE/budgets.yml
@@ -54,6 +54,7 @@ de:
           line_weight_label: "Deine Stimmenanzahl"
           unverified_note: "Ihre Daten werden manuell überprüft. Dies kann 1-2 Werktage in Anspruch nehmen. Danach werden Ihre Stimmen freigegeben."
           unverified_note_no_data_html: "Bitte %{verify_account}."
+          unfeasible_html: "Dieser Investitionsvorschlag <strong>wurde als nicht durchführbar markiert</strong> und wird nicht in die Abstimmungsphase übergehen."
         show:
           callouts:
             publishing_prices:
