--- a/config/locales/custom_updates/de-DE/devise.yml
+++ b/config/locales/custom_updates/de-DE/devise.yml
@@ -12,3 +12,4 @@ de:
             gender: Bitte wählen
             city_name_label: Stadt
             document_last_digits_label: Personalausweis / Passport (4 letzten Ziffern)
+            password_hint: Das Passwort muss mindestens 8 Zeichen umfassen.
