--- a/config/locales/custom_updates/de-DE/budgets.yml
+++ b/config/locales/custom_updates/de-DE/budgets.yml
@@ -27,5 +27,7 @@ de:
           phases:
             accepting: Der Investitionsvorschlag wurde erfolgreich eingereicht.
             reviewing: Der Investitionsvorschlag wird zur Zeit intern auf seine Durchführbarkeit überprüft.
-            reviewing_ballots: Die Abstimmung wird gerade intern überprüft.
             valuating: Die Kosten für diesen Investitionsvorschlag werden intern ermittelt.
+            publishing_prices: Die interne Kostenschätzung des Vorschlags ist abgeschlossen.
+            reviewing_ballots: Die Abstimmung wird gerade intern überprüft.
+            finished: Die interne Kostenschätzung des Vorschlags ist abgeschlossen.
