--- a/config/locales/custom_updates/de-DE/projekts.yml
+++ b/config/locales/custom_updates/de-DE/projekts.yml
@@ -14,7 +14,8 @@ de:
         expired_projekts: Abgeschlossene Projekte
         no_projekts: Keine Projekte
         no_projekts_for_current_filter: Keine Projekte für aktuellen filter
-        title: Projekte
+        title_old: Projekte
+        title: Projektübersicht
         to_projekt: Zum Projekt
         social_share:
           title: Projektübersicht
