--- a/config/locales/custom_updates/de-DE/common.yml
+++ b/config/locales/custom_updates/de-DE/common.yml
@@ -1,7 +1,7 @@
 de:
   custom:
     resource_names:
-      projekt: Projekt
+      projekt: Projekte
       debate: Diskussion
       proposal: Vorschläge
       poll: Abstimmung
