--- a/config/locales/custom_updates/de-DE/projekts.yml
+++ b/config/locales/custom_updates/de-DE/projekts.yml
@@ -153,3 +153,5 @@ de:
         title: Projekte
         title_active: Aktive Projekte
         title_archived: Abgelaufene Projekte
+      projekt_list:
+        title: Projektübersicht
