--- a/config/locales/custom_updates/de-DE/settings.yml
+++ b/config/locales/custom_updates/de-DE/settings.yml
@@ -31,3 +31,6 @@ de:
           show_in_index_order_expired_description: Zeigt die Beteiligungsmodule für den Tab "Archivierte Projektvorhaben"
           show_in_index_order_individual_list: Individuelle Liste
           show_in_index_order_individual_list_description: Zeigt Tab "Individuelle Liste" an
+        general:
+          enable_old_design: Altes Design verwenden
+          enable_old_design_description: Verwenden Sie das alte Design, in dem Sie die Einstellungen hier ändern
